# devicesim

./: .gitignore  CMakeLists.txt  LICENSE  at_cmd.h  at_cmd_defs.h  loop_cbd.h  main.c  run.sh  t.c
libs/: common.h
libs/at/: cmd.c  cmd.h  defs.h  engine.c  engine.h  param.c  param.h  resp.c  resp.h
libs/bthci/: dev_usb.c  dev_usb.h
libs/cmux/: cmux.c  cmux.h
libs/devices/: hci_usb.c  hci_usb.h  serial_usb.c  serial_usb.h
libs/nmea/: defs.h  generator.c  generator.h  printer.h  talker_defs.h  types.h
libs/usb/: device.c  device.h  enum_str.c  host.c  host.h  transfer.c  transfer.h
libs/util/: crc.c  crc.h  io.c  io.h  line_reader.c  line_reader.h  list.c  list.h  log.c  spawn.c  spawn.h  time.c  time.h
